@@ -50,13 +50,13 @@ namespace libtorrent
 	};
 	
 	typedef storage_interface* (*storage_constructor_type)(
-		file_storage const&, file_storage const*, std::string const&, file_pool&);
+		file_storage const&, file_storage const*, std::string const&, file_pool&, std::vector<boost::uint8_t> const&);
 
 	TORRENT_EXPORT storage_interface* default_storage_constructor(
-		file_storage const&, file_storage const* mapped, std::string const&, file_pool&);
+		file_storage const&, file_storage const* mapped, std::string const&, file_pool&, std::vector<boost::uint8_t> const&);
 
 	TORRENT_EXPORT storage_interface* disabled_storage_constructor(
-		file_storage const&, file_storage const* mapped, std::string const&, file_pool&);
+		file_storage const&, file_storage const* mapped, std::string const&, file_pool&, std::vector<boost::uint8_t> const&);
 
 }
 
